python/executable/build/bdist.macosx-10.8-x86_64/python2.7-standalone/app/collect/pysdif/sdif.h

#  define SDIF_API
#     define SDIF_API __declspec(dllexport)
#     define SDIF_API __declspec(dllimport)
#      define SDIF_API __attribute__ ((visibility("default")))
#      define SDIF_API
/* forward declaration of big SDIF file struct type */
typedef struct SdifFileS SdifFileT;
/* SdifHash.h */
typedef enum SdifHashIndexTypeE
{
  eHashChar,
  eHashInt4
} SdifHashIndexTypeET;
typedef union SdifHashIndexU SdifHashIndexUT;
union SdifHashIndexU
{
  char* Char[1]; /* tab of one pointer to fixe union size at 4 or 8 bytes */
  unsigned int  Int4;
} ;
typedef struct SdifHashNS SdifHashNT;
/* hash bin struct, containing linked list of entries */
struct SdifHashNS 
{
  SdifHashNT *Next;	/* pointer to next entry */
  SdifHashIndexUT Index;
  void* Data;
};
typedef struct SdifHashTableS SdifHashTableT;
struct SdifHashTableS
{
  SdifHashNT* *Table;		/* table of pointers to hash bins */
  unsigned int HashSize;	/* number of hash bins */
  SdifHashIndexTypeET IndexType;
  void (*Killer)(void *); 
  unsigned int NbOfData;	/* total number of entries */
} ;
typedef struct SdifHashTableIteratorS SdifHashTableIteratorT;
struct SdifHashTableIteratorS
{
  SdifHashTableT *HTable;	/* pointer to hash table		 */
  unsigned int    BinIndex;	/* index of current hash bin		 */
  SdifHashNT     *Entry;	/* pointer to current hash entry in list */
};
/*
//FUNCTION GROUP: File positioning
*/

/* SdifFile.c */

/*DOC:
  Rewind to start of file (before header!) 
  [return] 1 on success, 0 on error
*/
SDIF_API int SdifFRewind(SdifFileT *file);
#define SDIFFTRUNCATE_NOT_AVAILABLE -2
/*DOC:
  Truncate file at current position
  This function is only available on certain systems that have the
  ftruncate function in their system libraries. 
  [return] 1 on success, 0 for error (check errno),  
        MACRO SDIFFTRUNCATE_NOT_AVAILABLE if function is not available.
*/
SDIF_API int SdifFTruncate(SdifFileT *file);
/*DOC:
  Get position in file.
  [return] file offset or -1 for error.
  SdiffPosT is actually long.
 */
int SdiffGetPos(SdifFileT *file, SdiffPosT *pos);
/*DOC:
  Set absolute position in file.
  SdiffPosT is actually long.
  [Return] 0 on success, 
          -1 on error (errno is set, see fseek(3) for details)

  On Mac or Windows, seeking on a stream is always considered
  successful (return 0), even if no seek was done!
 */
int SdiffSetPos(SdifFileT *file, SdiffPosT *pos);
    /* on mac or windows, seeking on a stream is always considered
       successful (return 0)! */
#   define SdiffPosT            long
#   define SdiffIsFile(f)       ((f)!=stdin && (f)!=stdout && (f)!=stderr)
#   define Sdiffftell(f)        (SdiffIsFile(f)  ?  ftell(f)  :  0)
#   define SdiffGetPos(f,p)     ((*(p) = Sdiffftell(f)) == -1  ?  -1  :  0)
#   define SdiffSetPos(f,p)     (SdiffIsFile(f)  \
                                    ?  fseek(f, (long)(*(p)), SEEK_SET)  :  0)
/*
#   define SdiffPosT            fpos_t
#   define SdiffGetPos(f,p)     fgetpos((f),(p))
#   define SdiffSetPos(f,p)     fsetpos((f),(p))

#   define SdiffGetPos(f,p)     ((*(p) = ftell(f)) == -1  ?  -1  :  0)
#   define SdiffSetPos(f,p)     (fseek(f, (long)(*(p)), SEEK_SET))
*/

/*DS: FORCE long fpos*/
/* ftell/fseek can be applied to stdin/out/err at least in a restricted manner
 * (same as fgetpos/fsetpos) so let's try */
#   define SdiffPosT            long
#   define SdiffGetPos(f,p)     ((*(p) = ftell(f)) == -1  ?  -1  :  0)
#   define SdiffSetPos(f,p)     (fseek(f, (long)(*(p)), SEEK_SET))
/*DOC:
  Get position in file.
  [return] file offset or -1 for error.
  SdiffPosT is actually long.
 */
SDIF_API int SdifFGetPos(SdifFileT *file, SdiffPosT *pos);
/*DOC:
  Set absolute position in file.
  SdiffPosT is actually long.
  [Return] 0 on success, 
          -1 on error (errno is set, see fseek(3) for details)

  On Mac or Windows, seeking on a stream is always considered
  successful (return 0), even if no seek was done!
 */
SDIF_API int SdifFSetPos(SdifFileT *file, SdiffPosT *pos);
typedef char           SdifChar;
typedef char           SdifInt1;
typedef int16_t        SdifInt2;
typedef int32_t        SdifInt4;
typedef unsigned char  SdifUInt1;
typedef uint16_t       SdifUInt2;
typedef uint32_t       SdifUInt4;
typedef char           SdifChar;
typedef char           SdifInt1;
typedef short          SdifInt2;
typedef unsigned char  SdifUInt1;
typedef unsigned short SdifUInt2;
typedef int            SdifInt4;
typedef unsigned int   SdifUInt4;
typedef SdifUInt4      SdifSignature;
typedef float          SdifFloat4;
typedef double         SdifFloat8;
typedef enum SdifMachineE
{
  eUndefinedMachine,
  eBigEndian,
  eLittleEndian,
  eBigEndian64,
  eLittleEndian64,
  ePDPEndian
} SdifMachineET;
typedef enum SdifBinaryMode
{
  eBinaryModeUnknown,
  eBinaryModeWrite,
  eBinaryModeRead,
  eBinaryModeReadWrite,
  eBinaryModeStdInput,
  eBinaryModeStdOutput,
  eBinaryModeStdError
} SdifBinaryModeET ;
/* SdifGlobals.h */
/* DOC:

  Macro to generate an integer representation of the sequence of unsigned chars 
  for example :

  SdifSignature sig=SdifSignatureConst('A','B','C','D');

  Because integers are differently handled on little/big endian machines the
  signatures are swapped if read from a file to match internal format. */
  
#   define SdifSignatureConst(p1,p2,p3,p4) (((((unsigned int)(p1))&0xff)<<24)|((((unsigned int)(p2))&0xff)<<16)|((((unsigned int)(p3))&0xff)<<8)|(((unsigned int)(p4))&0xff))
typedef struct SdifNameValuesLS SdifNameValuesLT;
/*DOC:
  Stream ID Table, holds SdifStreamIDT stream ID table entries */
typedef struct SdifStreamIDTableS SdifStreamIDTableT;
/* SdifMatrixType.h */
typedef struct SdifMatrixTypeS SdifMatrixTypeT;
typedef struct SdifFrameTypeS SdifFrameTypeT;
/* SdifMatrix.h */
typedef struct SdifMatrixHeaderS SdifMatrixHeaderT;
typedef struct SdifOneRowS SdifOneRowT;
typedef struct SdifMatrixDataS SdifMatrixDataT;
/* SdifFrame.h */
typedef struct SdifFrameHeaderS SdifFrameHeaderT;
typedef struct SdifTimePositionLS SdifTimePositionLT;
/* SdifSignatureTab.h */
typedef struct SdifSignatureTabS SdifSignatureTabT;
/*DOC: 
  Holds a selection of what data to access in an SDIF file,
  parsed from a simple regular expression.  
*/
typedef struct
{
    char        *filename,      /* allocated / freed by 
                                   SdifInitSelection / SdifFreeSelection */
                *basename;      /* points into filename */
    SdifListP   stream, frame, matrix, column, row, time;

    SdifSelectIntMaskT streammask;
    SdifSelectIntMaskT rowmask;
    SdifSelectIntMaskT colmask;
} SdifSelectionT;
/*DOC:
  Level of Error */
typedef enum SdifErrorLevelE
{
        eFatal,
        eError,
        eWarning,
        eRemark,
        eNoLevel,
        eNumLevels      /* level count, must always be last */
} SdifErrorLevelET;
typedef struct SdifErrorLS SdifErrorLT;
/* SdifFileStruct.h */

/*
// DATA GROUP:  SDIF File Structure
*/

/*DOC:
  File mode argument for SdifFOpen. */
typedef enum SdifFileModeE
{
  eUnknownFileMode,     /* 0 */
  eWriteFile,
  eReadFile,
  eReadWriteFile,
  ePredefinedTypes,     /* 4 */

  eModeMask = 7,        /* get rid of flags */

  /* from here on we have flags that can be or'ed with the previous modes */
  eParseSelection = 8
} SdifFileModeET ;
/*
// DATA GROUP:          SDIF File Structure
*/

#define MaxUserData     10
/*DOC:
  THE SDIF File Structure! */
struct SdifFileS
{
  char               *Name;             /* Name of the file, can be "stdin, stdout, stderr */
  SdifFileModeET     Mode;              /* eWriteFile or eReadFile or ePredefinedTypes */
  int                isSeekable;        /* file is not pipe i/o */

  SdifUInt4          FormatVersion;     /* version of the SDIF format itself */
  SdifUInt4          TypesVersion;      /* version of the description type collection */

  SdifNameValuesLT   *NameValues;       /* DataBase of Names Values */
  SdifHashTableT     *MatrixTypesTable; /* DataBase of Matrix Types */
  SdifHashTableT     *FrameTypesTable;  /* DataBase of Frame Types */
/*  SdifHashTableT     *StreamIDsTable;    DataBase of Stream IDs */
  SdifStreamIDTableT *StreamIDsTable;   /* DataBase of Stream IDs */
  SdifTimePositionLT *TimePositions;    /* List of (Time, Position in file) */
  SdifSelectionT     *Selection;        /* default selection parsed from Name */

  FILE *Stream;                         /* Stream to read or to write */

  SdifSignature      CurrSignature;
  SdifFrameHeaderT   *CurrFramH;        /* Current Frame Header can be NULL */
  SdifMatrixHeaderT  *CurrMtrxH;        /* Current Matrix Header can be NULL */

  SdifFrameTypeT     *CurrFramT;
  SdifMatrixTypeT    *CurrMtrxT;
  SdifFloat8         PrevTime;
  SdifSignatureTabT  *MtrxUsed;

  SdifOneRowT        *CurrOneRow;
  /* Current OneRow allocated memory in function
   * of _SdifGranule, use SdifReInitOneRow(SdifOneRowT *OneRow, SdifDataTypeET DataType, SdifUInt4 NbData)
   * to assure NbData (=NbColumns) objects memory allocated
   */

  /* data pointer used by SdifFReadMatrixData, never uses the Header field */
  SdifMatrixDataT    *CurrMtrxData;

  size_t  FileSize;
  size_t  ChunkSize;

  SdiffPosT  CurrFramPos;
  SdiffPosT  StartChunkPos;
  SdiffPosT  Pos;
  
  SdifUInt2  TypeDefPass;
  SdifUInt2  StreamIDPass;

  char *TextStreamName;                 /* Name of the text file corresponding to the sdif file */
  FILE *TextStream;                     /* Stream text */

  SdifUInt4     ErrorCount [eNumLevels];/* Error count per level of severity */
  SdifErrorLT  *Errors;                 /* List of errors or warnings */

  int           NbUserData;             /* todo: hash table */
  void          *UserData [MaxUserData];
};      /* end struct SdifFileS */
SDIF_API SdifHashTableT* SdifCreateHashTable(unsigned int HashSize, SdifHashIndexTypeET IndexType, void (*Killer)(void *));