python/executable/build/bdist.macosx-10.8-x86_64/python2.7-standalone/app/collect/pysdif/pysdif.pxd

DEF MaxUserData = 10

IF UNAME_SYSNAME == "Windows":
    DEF DBL_MAX = 1.7976931348623157e+308
ELIF UNAME_SYSNAME == "Darwin":
    DEF DBL_MAX = 1.7976931348623157e+308
ELIF UNAME_SYSNAME == "Linux":
    DEF DBL_MAX = 1.7976931348623157e+308

DEF FLT_EPSILON = 10^(-5)

#cdef inline unsigned int sig2uint (char *sig):
#   return ((((<unsigned int>(sig[0])) & 0xff) << 24) | 
#       (((<unsigned int>(sig[1])) & 0xff) << 16) | 
#       (((<unsigned int>(sig[2])) & 0xff) << 8) | 
#       ((<unsigned int>(sig[3])) & 0xff))

from stdio cimport *
from stdlib cimport *

cdef extern from 'sdif.h':
    ctypedef char* const_char_ptr "const char*"
    ctypedef unsigned int const_unsigned_int "const unsigned int"
    ctypedef void* const_void_ptr "const void*"
    ctypedef int const_int "const int"
    


    #ifdef HAVE_STDINT_H
    #include <stdint.h>
    #endif
    #include <stdio.h>
    #include <stdlib.h>
    #include <float.h>

    #if defined (SDIF_IS_STATIC) || defined(EASDIF_IS_STATIC)
    #  define SDIF_API
    #else 
    # ifdef WIN32
    #   ifdef DO_EXPORT_SDIF
    #     define __declspec(dllexport)
    #   else
    #     define __declspec(dllimport)
    #   endif
    #  else
    #    if defined(__GNUC__) && defined( GCC_HAS_VISIBILITY)
    #      define __attribute__ ((visibility("default")))
    #    else
    #      define SDIF_API
    #    endif
    #  endif
    #endif


    #/* forward declaration of big SDIF file struct type */
    #typedef struct SdifFileS SdifFileT;

    #ctypedef struct SdifFileS SdifFileT
    cdef struct SdifFileS
    ctypedef SdifFileS SdifFileT


    #/* SdifHash.h */
    #typedef enum SdifHashIndexTypeE
    #{
    #  eHashChar,
    #  eHashInt4
    #} SdifHashIndexTypeET;
    cdef enum SdifHashIndexTypeE:
        eHashChar,
        eHashInt4
    ctypedef SdifHashIndexTypeE SdifHashIndexTypeET

    #typedef union SdifHashIndexU SdifHashIndexUT;

    #union SdifHashIndexU
    #{
    #  char* Char[1]; /* tab of one pointer to fixe union size at 4 or 8 bytes */
    #  unsigned int  Int4;
    #} ;
    cdef union SdifHashIndexU:
        char* Char[1]
        unsigned int Int4
    ctypedef SdifHashIndexU SdifHashIndexUT

    # --------------------------------------------------------------------------
    # 
    # 
    # 
    # typedef struct SdifHashNS SdifHashNT;
    # 
    # /* hash bin struct, containing linked list of entries */
    # struct SdifHashNS 
    # {
    #   SdifHashNT *Next;   /* pointer to next entry */
    #   SdifHashIndexUT Index;
    #   void* Data;
    # };

    cdef struct SdifHashNS
    ctypedef SdifHashNS SdifHashNT
    struct SdifHashNS:
        SdifHashNT *Next    ## pointer to next entry 
        SdifHashIndexUT Index
        void * Data
        
        
    # 
    # typedef struct SdifHashTableS SdifHashTableT;
    # 
    # struct SdifHashTableS
    # {
    #   SdifHashNT* *Table;     /* table of pointers to hash bins */
    #   unsigned int HashSize;  /* number of hash bins */
    #   SdifHashIndexTypeET IndexType;
    #   void (*Killer)(void *); 
    #   unsigned int NbOfData;  /* total number of entries */
    # } ;
    # 

    struct SdifHashTableS:
        SdifHashNT* *Table      # /* table of pointers to hash bins */
        unsigned int HashSize   # /* number of hash bins */
        SdifHashIndexTypeET IndexType
        #void (*Killer)(void *) 
        void Killer(void *)     # function pointer
        unsigned int NbOfData   # /* total number of entries */
    ctypedef SdifHashTableS SdifHashTableT

    # typedef struct SdifHashTableIteratorS SdifHashTableIteratorT;
    # 
    # struct SdifHashTableIteratorS
    # {
    #   SdifHashTableT *HTable; /* pointer to hash table         */
    #   unsigned int    BinIndex;   /* index of current hash bin         */
    #   SdifHashNT     *Entry;  /* pointer to current hash entry in list */
    # };
    # 
    struct SdifHashTableIteratorS:
        SdifHashTableT *HTable      #/* pointer to hash table        */
        unsigned int    BinIndex    #/* index of current hash bin        */
        SdifHashNT     *Entry       #/* pointer to current hash entry in list */
    ctypedef SdifHashTableIteratorS SdifHashTableIteratorT
    
    # /*
    # //FUNCTION GROUP: File positioning
    # */
    # 
    # /* SdifFile.c */
    # 
    # /*DOC:
    #   Rewind to start of file (before header!) 
    #   [return] 1 on success, 0 on error
    # */
    # int SdifFRewind(SdifFileT *file);
    cdef int SdifFRewind(SdifFileT *file)
    
    # 
    # 
    # #define SDIFFTRUNCATE_NOT_AVAILABLE -2
    # /*DOC:
    #   Truncate file at current position
    #   This function is only available on certain systems that have the
    #   ftruncate function in their system libraries. 
    #   [return] 1 on success, 0 for error (check errno),  
    #         MACRO SDIFFTRUNCATE_NOT_AVAILABLE if function is not available.
    # */
    # int SdifFTruncate(SdifFileT *file);
    # cdef int SdifFTruncate(SdifFileT *file)
    # 
    # 
    # 
    # /* Give documentation and fake prototype for positioning macros.
    #    Cocoon ignores the #if 0.
    # */
    # #if 0
    # 
    # /*DOC:
    #   Get position in file.
    #   [return] file offset or -1 for error.
    #   SdiffPosT is actually long.
    #  */
    # int SdiffGetPos(SdifFileT *file, SdiffPosT *pos);
    #   cdef int SdiffGetPos(SdifFileT *file, SdiffPosT *pos)
    # 
    # /*DOC:
    #   Set absolute position in file.
    #   SdiffPosT is actually long.
    #   [Return] 0 on success, 
    #           -1 on error (errno is set, see fseek(3) for details)
    # 
    #   On Mac or Windows, seeking on a stream is always considered
    #   successful (return 0), even if no seek was done!
    #  */
    # int SdiffSetPos(SdifFileT *file, SdiffPosT *pos);
    # 
    # #endif  /* if 0 */
    # 
    # 
    # /* to do fpos_t compatible on MacinTosh */
    # #if defined(MACINTOSH) || defined(WIN32)
    #     /* on mac or windows, seeking on a stream is always considered
    #        successful (return 0)! */
    # #   define SdiffPosT            long
    ctypedef long SdiffPosT
    # #   define SdiffIsFile(f)       ((f)!=stdin && (f)!=stdout && (f)!=stderr)
    cdef int SdiffIsFile(SdifFileT *f)
    # #   define Sdiffftell(f)        (SdiffIsFile(f)  ?  ftell(f)  :  0)
    cdef int Sdiffftell(SdifFileT *f)
    # #   define SdiffGetPos(f,p)     ((*(p) = Sdiffftell(f)) == -1  ?  -1  :  0)
    cdef int SdiffGetPos(SdifFileT *f, SdiffPosT *p)
    # #   define SdiffSetPos(f,p)     (SdiffIsFile(f)  \
    #                                     ?  fseek(f, (long)(*(p)), SEEK_SET)  :  0)
    cdef int SdiffSetPos(SdifFileT *f, SdiffPosT *p)
    # #else
    # /*
    # #   define SdiffPosT            fpos_t
    # #   define SdiffGetPos(f,p)     fgetpos((f),(p))
    # #   define SdiffSetPos(f,p)     fsetpos((f),(p))
    # 
    # #   define SdiffGetPos(f,p)     ((*(p) = ftell(f)) == -1  ?  -1  :  0)
    # #   define SdiffSetPos(f,p)     (fseek(f, (long)(*(p)), SEEK_SET))
    # */
    # 
    # /*DS: FORCE long fpos*/
    # /* ftell/fseek can be applied to stdin/out/err at least in a restricted manner
    #  * (same as fgetpos/fsetpos) so let's try */
    # #   define SdiffPosT            long
    # #   define SdiffGetPos(f,p)     ((*(p) = ftell(f)) == -1  ?  -1  :  0)
    # #   define SdiffSetPos(f,p)     (fseek(f, (long)(*(p)), SEEK_SET))
    # #endif
    # 
    # 
    # 
    # /*DOC:
    #   Get position in file.
    #   [return] file offset or -1 for error.
    #   SdiffPosT is actually long.
    #  */
    # int SdifFGetPos(SdifFileT *file, SdiffPosT *pos);
    cdef int SdifFGetPos(SdifFileT *file, SdiffPosT *pos)
    # 
    # /*DOC:
    #   Set absolute position in file.
    #   SdiffPosT is actually long.
    #   [Return] 0 on success, 
    #           -1 on error (errno is set, see fseek(3) for details)
    # 
    #   On Mac or Windows, seeking on a stream is always considered
    #   successful (return 0), even if no seek was done!
    #  */
    # int SdifFSetPos(SdifFileT *file, SdiffPosT *pos);
    cdef int SdifFSetPos(SdifFileT *file, SdiffPosT *pos)
    # 
    # 
    # 
    # 
    # /* SdifHard_OS.h */
    # #ifdef HAVE_STDINT_H
    # typedef char           SdifChar;
    # typedef char           SdifInt1;
    # typedef int16_t        SdifInt2;
    # typedef int32_t        SdifInt4;
    # typedef unsigned char  SdifUInt1;
    # typedef uint16_t       SdifUInt2;
    # typedef uint32_t       SdifUInt4;
    # #else
    # typedef char           SdifChar;
    # typedef char           SdifInt1;
    # typedef short          SdifInt2;
    # typedef unsigned char  SdifUInt1;
    # typedef unsigned short SdifUInt2;
    # typedef int            SdifInt4;
    # typedef unsigned int   SdifUInt4;
    # #endif
    ctypedef char           SdifChar
    ctypedef char           SdifInt1
    ctypedef short          SdifInt2
    ctypedef unsigned char  SdifUInt1
    ctypedef unsigned short SdifUInt2
    ctypedef int            SdifInt4
    ctypedef unsigned int   SdifUInt4
    
    # 
    # typedef SdifUInt4      SdifSignature;
    # typedef float          SdifFloat4;
    # typedef double         SdifFloat8;

    ctypedef SdifUInt4      SdifSignature
    ctypedef float          SdifFloat4
    ctypedef double         SdifFloat8

    # 
    # typedef enum SdifMachineE
    # {
    #   eUndefinedMachine,
    #   eBigEndian,
    #   eLittleEndian,
    #   eBigEndian64,
    #   eLittleEndian64,
    #   ePDPEndian
    # } SdifMachineET;
    # 
    cdef enum SdifMachineE:
        eUndefinedMachine,
        eBigEndian,
        eLittleEndian,
        eBigEndian64,
        eLittleEndian64,
        ePDPEndian
    ctypedef SdifMachineE SdifMachineET
    
    # typedef enum SdifBinaryMode
    # {
    #   eBinaryModeUnknown,
    #   eBinaryModeWrite,
    #   eBinaryModeRead,
    #   eBinaryModeReadWrite,
    #   eBinaryModeStdInput,
    #   eBinaryModeStdOutput,
    #   eBinaryModeStdError
    # } SdifBinaryModeET ;
    # 
    cdef enum SdifBinaryMode:
        eBinaryModeUnknown,
        eBinaryModeWrite,
        eBinaryModeRead,
        eBinaryModeReadWrite,
        eBinaryModeStdInput,
        eBinaryModeStdOutput,
        eBinaryModeStdError,
    ctypedef SdifBinaryMode SdifBinaryModeET 
        #
    # /* SdifGlobals.h */
    # /* DOC:
    # 
    #   Macro to generate an integer representation of the sequence of unsigned chars 
    #   for example :
    # 
    #   SdifSignature sig=SdifSignatureConst('A','B','C','D');
    # 
    #   Because integers are differently handled on little/big endian machines the
    #   signatures are swapped if read from a file to match internal format. */
    #   
    # #   define SdifSignatureConst(p1,p2,p3,p4) (((((unsigned int)(p1))&0xff)<<24)|((((unsigned int)(p2))&0xff)<<16)|((((unsigned int)(p3))&0xff)<<8)|(((unsigned int)(p4))&0xff))
    # 
    cdef unsigned int SdifSignatureConst(char p1, char p2, char p3, char p4)
    
